CSS: Fix vertical alignment of one-line blocks

--- a/wiki/src/local.css
+++ b/wiki/src/local.css
@@ -1048,6 +1048,11 @@ div.bug, div.caution, div.note, div.tip {
   margin: 0 0 1.5em 0;
   max-width: 38em;
 }
+div.bug p:only-child, div.caution p:only-child, div.note p:only-child, div.tip p:only-child {
+  display: table-cell;
+  height: 2.5em;
+  vertical-align: bottom;
+}
 div.bug p:last-child, div.caution p:last-child, div.note p:last-child, div.tip p:last-child {
   margin-bottom: 0;
 }
